# daow

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/dao/: Cargo.toml  build.rs
crates/dao-macros/: Cargo.toml
crates/dao-macros/src/: dao.rs  entity.rs  lib.rs
crates/dao/examples/: basic.rs  basic_error_stack.rs  custom_newtype_readwrite.rs  custom_types.rs  destructured.rs  execute_entity.rs  full_app.rs  multi_dao.rs  multi_dao_tx.rs  passthrough.rs  pool_builder.rs  pool_execute_direct.rs  tx_poc.rs  writes.rs
crates/dao/src/: conn.rs  entity_meta.rs  error.rs  from_row.rs  from_sql.rs  lib.rs  pool.rs  row.rs  to_row.rs  to_sql.rs
crates/dao/tests/: compile_fail_tests.rs  dao_macro.rs  dao_writes.rs  entity_derive.rs  error_stack_report.rs  jinn_patterns.rs  transactions.rs  typed_dao_tx.rs  upsert.rs
crates/dao/tests/compile_fail/: destructured_field_count_mismatch.rs  destructured_field_count_mismatch.stderr  execute_entity_field_count_mismatch.rs  execute_entity_field_count_mismatch.stderr  execute_param_mismatch.rs  execute_param_mismatch.stderr  invalid_sql.rs  invalid_sql.stderr  no_return_type.rs  no_return_type.stderr  param_mismatch.rs  param_mismatch.stderr  passthrough_with_annotation.rs  passthrough_with_annotation.stderr  table_without_pk.rs  table_without_pk.stderr  tx_commit_while_view_live.rs  tx_commit_while_view_live.stderr  tx_view_escapes_scope.rs  tx_view_escapes_scope.stderr
crates/dao/tests/db/: test.db
crates/daow/: Cargo.toml  build.rs
crates/daow-macros/: Cargo.toml
crates/daow-macros/src/: dao.rs  entity.rs
crates/daow/examples/: basic.rs  basic_error_stack.rs  custom_newtype_readwrite.rs  custom_types.rs  destructured.rs  execute_entity.rs  full_app.rs  multi_dao.rs  multi_dao_tx.rs  passthrough.rs  pool_builder.rs  pool_execute_direct.rs  writes.rs
crates/daow/src/: error.rs  lib.rs  pool.rs  row.rs  to_row.rs
crates/daow/tests/: compile_fail_tests.rs  dao_macro.rs  dao_writes.rs  entity_derive.rs  error_stack_report.rs  jinn_patterns.rs  transactions.rs  typed_dao_tx.rs  upsert.rs
crates/daow/tests/compile_fail/: destructured_field_count_mismatch.rs  destructured_field_count_mismatch.stderr  execute_entity_field_count_mismatch.rs  execute_param_mismatch.rs  execute_param_mismatch.stderr  invalid_sql.rs  invalid_sql.stderr  no_return_type.rs  no_return_type.stderr  param_mismatch.rs  param_mismatch.stderr  passthrough_with_annotation.rs  passthrough_with_annotation.stderr  table_without_pk.rs  table_without_pk.stderr  tx_commit_while_view_live.rs  tx_view_escapes_scope.rs
docs/: guide.md
