[workspace]
members = ["crates/daow", "crates/daow-macros"]
resolver = "2"

[workspace.dependencies]
# Internal
daow-macros = { version = "0.1.0", path = "crates/daow-macros" }

# External — versions frozen at current requirements except rusqlite (upgraded)
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
async-trait = "0.1"
tracing = "0.1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
tempfile = "3"
trybuild = "1"
error-stack = "0.7"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
doc_markdown = "allow"
enum_glob_use = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
single_match = "allow"
single_match_else = "allow"
wildcard_imports = "allow"
