[package]
name = "dao"
version = "0.1.0"
edition = "2021"

[dependencies]
dao-macros.workspace = true
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild.workspace = true
error-stack.workspace = true

[build-dependencies]
rusqlite.workspace = true
