[package]
name = "dao"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A small, async SQLite data-access layer for Rust with compile-time SQL validation"
license = "LGPL-3.0-or-later"
# TODO(owner): set real repository URL after crate rename
repository = "https://github.com/jayson-lennon/dao"
keywords = ["sqlite", "database", "orm", "async", "sql"]
categories = ["database", "asynchronous"]
readme = "README.md"
exclude = ["/docs", "AGENTS.md", "justfile", "release.toml", "cliff.toml"]

[dependencies]
dao-macros.workspace = true
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild.workspace = true
error-stack.workspace = true

[build-dependencies]
rusqlite.workspace = true

[lints]
workspace = true
