[package]
name = "daow-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Proc-macro support for the daow SQLite data-access crate (compile-time SQL validation)"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jayson-lennon/daow"
keywords = ["sqlite", "database", "macros", "proc-macro", "sql"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
rusqlite.workspace = true

[lints]
workspace = true
