[package]
name = "daow"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A small, async SQLite data-access layer for Rust with compile-time SQL validation"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jayson-lennon/daow"
keywords = ["sqlite", "database", "orm", "async", "sql"]
categories = ["database", "asynchronous"]
exclude = ["/docs", "AGENTS.md", "justfile", "release.toml", "cliff.toml"]

[dependencies]
daow-macros.workspace = true
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild.workspace = true
error-stack.workspace = true

[build-dependencies]
rusqlite.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
# The `daow` library crate contains no `#[dao]` invocations, so docs.rs can
# build it without `DAOW_DATABASE_URL`. (The macro is only exercised by the
# `daow-macros` tests/examples and downstream consumers.) We do not inject the
all-features = true
